Improve menu visibility and fix mobile responsiveness issues

--- a/assets/css/out.css
+++ b/assets/css/out.css
@@ -1655,9 +1655,8 @@ body {
 }
 
 [data-brand=commercial] .header .navigation__link:hover {
-  color: var(--michelin-blue);
-  background-color: #e3eaf8;
-  border-radius: 2px;
+  color: var(--michelin-dark-blue);
+  background-color: #f9fbffc2;
 }
 
 @media screen and (max-width: 960px) {
@@ -2986,7 +2985,7 @@ section {
 }
 
 [data-brand=commercial] .footer-bottom {
-  background: linear-gradient(180deg, #0b1129 0%, 60%, rgb(85 95 140 / 40%) 100%)
+  background: linear-gradient(180deg, #00000000 0%, 60%, rgb(16 37 96) 100%)
 }
 
 .social-tools--items .item .label {
@@ -3013,6 +3012,7 @@ section {
 
 .header.header-sticky:not(.opened) {
   position: fixed;
+  background-color: #0f1a43f0;
 }
 
 .rationale {
@@ -3094,6 +3094,7 @@ section {
   }
   .header.header-sticky:not(.opened){
     position: sticky;
+    background-color: var(--michelin-dark-blue);
   }
 }
 
@@ -3108,7 +3109,7 @@ section {
   }
 }
 
-main {
+body {
   background-image: url(/assets/images/fond.png);
   background-repeat: repeat;
   background-size: contain;
@@ -3159,6 +3160,10 @@ h4.activity {
   font-family: "Noto Sans", sans-serif;
 }
 
+#legal-mention section{
+  overflow: auto;
+}
+
 #legal-mention h1{
   font-family: "MichelinUnitTitling-Bold", sans-serif;
   font-size: 1.75rem;
@@ -3200,8 +3205,17 @@ h4.activity {
   align-items: center;
 }
 
+.robot-footer {
+  display: flex;
+  align-items: center;
+}
+
+.robot-footer img{
+  max-width: 300px;
+}
+
 @media (max-width: 960px) {
-  .robot-footer{
+  .robot-footer img{
     max-width: 44vw;
   }
 }
